--- a/ethereum-tickets/.env.example
+++ b/ethereum-tickets/.env.example
@@ -1,6 +1,6 @@
 ## Ropsten deployment
+MNEMONIC=there you mnemonic pass
 ETHEREUM_NODE_URL=https://ropsten.infura.io/v3/b42ca6aa17b7460bbff8de90e888eaf7
-ROPSTEN_WALLET_KEY=0x9906903e3Ce4aE0C4317aE2530a47575944b0A20
 
 ## Local deployment
 TRUFFLE_DEV_HOST=
