--- a/ethereum-tickets/package.json
+++ b/ethereum-tickets/package.json
@@ -15,9 +15,10 @@
     "migrate:reset-mainnet": "truffle migrate --reset --network mainnet"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.3.0",
+    "@openzeppelin/contracts": "^3.4.1",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.1.0",
+    "ganache": "^6.4.4",
     "pify": "^5.0.0",
     "truffle-flattener": "^1.5.0",
     "web3": "^1.3.1"
