--- a/ethereum-tickets/.env
+++ b/ethereum-tickets/.env
@@ -1,5 +1,5 @@
 ## Ropsten deployment
-MNEMONIC=crunch enemy hundred draw proud shuffle stick grid skate enroll cry opera
+MNEMONIC=
 ETHEREUM_NODE_URL=https://ropsten.infura.io/v3/b42ca6aa17b7460bbff8de90e888eaf7
 
 ## Local deployment
