--- a/ethereum-tickets/package.json
+++ b/ethereum-tickets/package.json
@@ -16,15 +16,16 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.1",
+    "@openzeppelin/test-helpers": "^0.5.11",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.1.0",
     "ganache": "^6.4.4",
     "pify": "^5.0.0",
     "truffle-flattener": "^1.5.0",
-    "web3": "^1.3.1"
+    "web3": "^1.3.1",
+    "@truffle/hdwallet-provider": "^1.2.1"
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "^1.2.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1"
   }
